# SofaCV

./: .gitlab-ci.yml  CMakeLists.txt  CalibLoader.cpp  CalibLoader.h  CameraCalib.cpp  CameraCalib.h  CameraUtils.cpp  CameraUtils.h  Data.h  DataSliderMgr.h  DataSliderMgr.inl  DataTypes.h  DependencyGraphAnimationLoop.h  DependencyGraphVisitor.h  FrameExporter.cpp  FrameExporter.h  FrameViewer.cpp  FrameViewer.h  FromPython.h  Image.h  ImageExporter.cpp  ImageExporter.h  ImageFilter.cpp  ImageFilter.h  ImageFilterDisplay.cpp  ImageFilterDisplay.h  ImageFilterModel.cpp  ImageFilterModel.h  ImageFilter_newGUI.cpp  ImageFilter_newGUI.h  ImageFilter_oldGUI.cpp  ImageFilter_oldGUI.h  ImageUtils.h  ImageViewer.cpp  ImageViewer.h  ImplicitDataEngine.cpp  ImplicitDataEngine.h  PCViewer.cpp  PCViewer.h  PropagateEventByTagVisitor.cpp  (+23 more)
SofaCV_test/: BaseFrameGrabber_test.cpp  CMakeLists.txt  ImplicitDataEngine_test.cpp
SofaORCommon_test/: ImplicitDataEngine_test.cpp
controller/: CommunicationController.cpp  CommunicationController.h  CommunicationController.inl
doc/: Doxyfile
examples/: ExamplePython.py  ExampleScheduler.py  ImageFilterController.py
gui/qml/: SofaORCommon_qml.qrc
gui/qml/SofaDataTypes/: SofaDataType_cvDMatch.qml  SofaDataType_cvKeypoint.qml  SofaDataType_cvMat.qml
python/SofaOR/: __init__.py
python3/: Binding_cvMat.cpp  Binding_cvMat.h  Binding_cvMat_doc.h  CMakeLists.txt  Module_SofaCV.cpp
qml/: ImageProcessing_qml.qrc
qml/SofaWidgets/: ImageFilterWidget.qml
resources/: test_video.avi
resources/calib/: 7@10cm_NoFlags.yml  7@10cm_THIN_PRIS.yml  calib7mm@10cm_No flags.yml  calib7mm@10cm_No flagsCentred.yml  calib7mm@10cm_RATI_THIN.yml  calib7mm@10cm_RATI_THINCentred.yml  calibExporterTest.yml  p11_NoFlags7@5cm.yml  xrayCalibStereo.yml
src/: DMatch.cpp  DMatch.h  DataSliderMgr.h  DataSliderMgr.inl  DependencyGraphAnimationLoop.cpp  DependencyGraphAnimationLoop.h  ImageFilter.h  ImageFilter_newGUI.cpp  ImageFilter_newGUI.h  ImageFilter_oldGUI.cpp  ImageFilter_oldGUI.h  ImplicitDataEngine.cpp  ImplicitDataEngine.h  SofaCVPlugin.cpp  SofaCVPlugin.h  cvKeypoint.h  cvMat.h  initplugin.cpp
src/SofaCV/: DataSliderMgr.inl  DependencyGraphAnimationLoop.cpp  DependencyGraphVisitor.cpp  ImageFilter_oldGUI.cpp  ImageFilter_oldGUI.h  ImplicitDataEngine.cpp  ImplicitDataEngine.h  SofaCV.h  SofaCV.h.in  SofaCVPlugin.h
src/SofaCV/acquisition/: BaseFrameGrabber.cpp  BaseFrameGrabber.h  BaseGrabber.cpp  BaseGrabber.h  BaseScheduler.cpp  BaseScheduler.h  DTScheduler.cpp  DTScheduler.h  RTScheduler.cpp  RTScheduler.h  VideoGrabber.cpp  VideoGrabber.h
src/SofaCV/datatypes/: cvDMatch.cpp  cvDMatch.h  cvKeypoint.cpp  cvKeypoint.h  cvMat.h  cvMatUtils.h
src/SofaCV/gui/: ImageFilterDisplay.cpp  ImageFilterModel.cpp
src/SofaCV/gui/qml/: SofaCV_qml.qrc
src/SofaCV/python/: Binding_cvMatData.h
src/SofaCV/utils/: FrameExporter.cpp  FrameExporter.h  FrameViewer.cpp  FrameViewer.h  PCViewer.cpp  PCViewer.h
src/acquisition/: BaseFrameGrabber.cpp  BaseFrameGrabber.h  BaseGrabber.cpp  BaseGrabber.h  VideoGrabber.cpp  VideoGrabber.h
src/datatypes/: cvDMatch.h  cvKeypoint.h  cvMat.cpp  cvMat.h  cvMatUtils.h
src/gui/: ImageFilterDisplay.h  ImageFilterModel.cpp  ImageFilterModel.h
src/gui/qml/: SofaCV_qml.qrc
src/gui/qml/SofaWidgets/: ImageFilterWidget.qml
src/python/: Binding_cvMatData.cpp  Binding_cvMatData.h
src/python/SofaCV/: __init__.py
src/utils/: FrameExporter.cpp  FrameExporter.h  FrameViewer.cpp  FrameViewer.h  PCViewer.cpp  PCViewer.h
